--- a/BeezNest/Views/Admin/CreateProduct.cshtml
+++ b/BeezNest/Views/Admin/CreateProduct.cshtml
@@ -14,7 +14,7 @@
                         <label class="col-md-4 col-form-label">Upload Images</label>
                         <div class="col-md-8">
 
-                            <input type="file" class="form-control w-100" accept="image/*" asp-for="ProductImages" multiple />
+                            <input type="file" class="form-control w-100" accept="image/*" asp-for="ProductImages" multiple  required/>
                         </div>
                     </div>
 
@@ -22,7 +22,7 @@
                         <label class="col-md-4 col-form-label">Product/Model</label>
                         <div class="col-md-8">
 
-                            <input type="text" class="form-control w-100" asp-for="ProductsModel" placeholder="Enter Product/model" />
+                            <input type="text" class="form-control w-100" asp-for="ProductsModel" placeholder="Enter Product/model" required />
                         </div>
                     </div>
 
@@ -30,7 +30,7 @@
                         <label class="col-md-4 col-form-label">Specifications</label>
                         <div class="col-md-8">
 
-                            <input type="text" class="form-control w-100" asp-for="Specifications" placeholder="Enter specifications" />
+                            <input type="text" class="form-control w-100" asp-for="Specifications" placeholder="Enter specifications" required/>
                         </div>
                     </div>
 
@@ -38,7 +38,7 @@
                         <label class="col-md-4 col-form-label">Price</label>
                         <div class="col-md-8">
 
-                            <input type="number" class="form-control w-100" asp-for="Price" placeholder="Enter price" />
+                            <input type="number" class="form-control w-100" asp-for="Price" placeholder="Enter price" required />
                         </div>
                     </div>
 
@@ -46,7 +46,7 @@
                         <label class="col-md-4 col-form-label">Number of Items</label>
                         <div class="col-md-8">
 
-                            <input type="number" class="form-control w-100" asp-for="NumberOfItem" placeholder="Enter number of items" />
+                            <input type="number" class="form-control w-100" asp-for="NumberOfItem" placeholder="Enter number of items" required/>
                         </div>
                     </div>
 
@@ -54,7 +54,7 @@
                         <label class="col-md-4 col-form-label">Available Colors</label>
                         <div class="col-md-8">
 
-                            <input type="text" class="form-control w-100" asp-for="Colors" placeholder="Enter colors separated by commas (e.g., Red, Blue, Green)" />
+                            <input type="text" class="form-control w-100" asp-for="Colors" placeholder="Enter colors separated by commas (e.g., Red, Blue, Green)" required/>
                         </div>
                     </div>
 
