--- a/BeezNest/Views/Account/AdminRegistration.cshtml
+++ b/BeezNest/Views/Account/AdminRegistration.cshtml
@@ -5,8 +5,7 @@
 }
 
 <style>
-    body, html
-    {
+    body, html {
         height: 100%;
     }
 
@@ -79,21 +78,23 @@
 
                     </div>
 
-
-
-                    <div class="mx-auto">
+                    <div class="text-center mt-4">
                         <button type="submit" class="btn btn-secondary w-25" onclick="registration()">Submit</button>
                     </div>
+
+                    <div class="text-center mt-2">
+                        <small> already have an account? <a asp-controller="Account" asp-action="Login">Login</a></small>
+                    </div>
+
                 </div>
 
             </div>
-            <small class="text-center"> already have an account? <a asp-controller="Account" asp-action="Login">Login</a></small>
 
 
         </div>
     </div>
 </div>
-@* 
+@*
 <div class="centered-card">
     <div class="card" style="width: 30rem;">
         <div class="card-body">
