--- a/BeezNest/Views/Shared/_AccountLayout.cshtml
+++ b/BeezNest/Views/Shared/_AccountLayout.cshtml
@@ -6,48 +6,24 @@
     <title>@ViewData["Title"] - BeezNest</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-     <link rel="stylesheet" href="~/css/style.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/style.css" asp-append-version="true" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link href="~/css/sweetalert2.css" rel="stylesheet" />
 
     <style>
-        .footer-3 ul {
-            list-style: none;
-            padding: 0;
-            margin: 0;
+
+        .navbar {
+            padding: 0.5rem 1rem;
         }
 
-        .footer-3 a {
-            text-decoration: none;
-            color: white;
+
+        .input-group input {
+            height: 40px;
+            border: 1px solid #ced4da;
         }
 
-            .footer-3 a:hover {
-                text-decoration: underline;
-                color: #FFD700;
-            }
-
-        .input-group {
-            width: 100%;
-            height: 55px;
-        }
-
-        .CartCount {
-            position: relative;
-            bottom: 10px;
-            text-decoration: none;
-        }
-
-        .SearchForm {
-            position: fixed;
-            top: 60px; /* Adjust this to the correct space below the header */
-            width: 75%;
-            z-index: 9999; /* Higher z-index to ensure it stays on top */
-            background-color: #fff; /* Add a background color if transparency is an issue */
-            margin-left: 200px;
-        }
-        .container-fluid i{
-            color:white;
+        .input-group button {
+            height: 40px;
         }
 
     </style>
@@ -151,119 +127,57 @@
     </script>
 
 
-     
+
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light  border-bottom box-shadow mb-3">
-            <div class="container-fluid">
-                <button class="btn text-white" type="button" data-bs-toggle="offcanvas" data-bs-target="#demo">
-                    <span><i class="fa-solid fa-bars"></i></span>
-                </button>
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">BeezNest</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
-                    </ul>
-                </div>              
-                <div class="ms-5">
-                    <ul class="navbar-nav">
-                        <li class="nav-item account">
-                            <a class="nav-link text-white" asp-area="" asp-controller="Account" asp-action="Login">Login</a>
-                        </li>
-                        <li class="nav-item account">
-                            <a class="nav-link text-white" asp-area="" asp-controller="Account" asp-action="registration">Register</a>
-                        </li>
-                    </ul>
-                </div>
+        <nav class="navbar navbar-light bg-light border-bottom box-shadow fixed-top">
+            <div class="container d-flex justify-content-between align-items-center">
+                <!-- Logo and Brand -->
+                <a class="navbar-brand d-flex align-items-center" asp-area="" asp-controller="Home" asp-action="Index">
+                    <img src="~/StockPhotos/websiteLogo.jpeg" alt="BeezNest Logo" class="img-fluid"
+                         style="height: 40px; width: auto; margin-right: 10px;">
+                    <span class="fw-bold text-dark">BeezNest</span>
+                </a>
+
+                <!-- Login and Register Links -->
+                <ul class="navbar-nav d-flex flex-row">
+                    <li class="nav-item mx-2">
+                        <a class="nav-link text-dark fw-semibold" asp-area="" asp-controller="Account" asp-action="Login">
+                            <i class="fa-solid fa-sign-in-alt"></i> Login
+                        </a>
+                    </li>
+                    <li class="nav-item mx-2">
+                        <a class="nav-link text-dark fw-semibold" asp-area="" asp-controller="Account" asp-action="Registration">
+                            <i class="fa-solid fa-user-plus"></i> Register
+                        </a>
+                    </li>
+                </ul>
             </div>
         </nav>
-
-        
     </header>
 
 
-    
-    <div class="container" >
+
+
+
+
+    <div class="container">
         <main role="main" class="pb-3" style="min-height:550px;">
             @RenderBody()
         </main>
     </div>
 
-    <footer id="footer" class="footer-3" style="position: absolute">
-        <div class="site-footer">
-            <div class="container-fluid" style="background-color: #0196E7">
-                <!--Footer Links-->
-                <div class="footer-top">
-                    <div class="row" style="color:white">
-                        <div class="col-8 col-sm-12 col-md-3 col-lg-3 contact-box">
-                            <h5>ABOUT US</h5>
-                            <ul class="addressFooter">
-                                <li><p>Beeznest is poised as the leading platform for Gadgets and accessories in Nigeria which gives a seameless transactional experiences and unbeatable friendly cost </p> </li>
-                                <li><i class="fa-whatsapp"></i><p>07039305088</p></li>
-                                <li class="email"><i class="icon anm anm-envelope-l"></i><p>Beeznest@gmail.com</p></li>
-                            </ul>
-                        </div>
-                        <div class="col-8 col-sm-12 col-md-3 col-lg-3 footer-links">
-                            <h5>Quick Shop</h5>
-                            <ul>
-                                <li><a href="#">Buy</a></li>
-                                <li><a href="#">Sell</a></li>
-                                <li><a href="#">Repair</a></li>
-                                <li><a href="#">Swap</a></li>
-                                <li><a href="#">Others</a></li>
-                            </ul>
-                        </div>
-                        <div class="col-8 col-sm-12 col-md-3 col-lg-3 footer-links">
-                            <h4 class="h4">Informations</h4>
-                            <ul>
-                                <li><a href="#">About us</a></li>
-                                <li><a href="#">Careers</a></li>
-                                <li><a href="#">Privacy policy</a></li>
-                                <li><a href="#">Terms &amp; condition</a></li>
-                                <li><a href="#">My Account</a></li>
-                            </ul>
-                        </div>
-                        <div class="col-8 col-sm-12 col-md-3 col-lg-3 footer-links">
-                            <h4 class="h4">Customer Services</h4>
-                            <ul>
-                                <li><a href="#">Request Personal Data</a></li>
-                                <li><a href="#">FAQ's</a></li>
-                                <li><a href="#">Contact Us</a></li>
-                                <li><a href="#">Orders and Returns</a></li>
-                                <li><a href="#">Support Center</a></li>
-                            </ul>
-                        </div>
-                        <div class="col-8 col-sm-12 col-md-3 col-lg-3">
-                            <div class="display-table">
-                                <div class="display-table-cell footer-newsletter">
-                                    <form action="#" method="post">
-                                        <label class="h4">Newsletter</label>
-                                        <p>Be the first to hear about new mobile and get to see products that are on promo..</p>
-                                        <div class="input-group">
-                                            <input type="email" class="input-group__field newsletter__input" name="EMAIL" value="" placeholder="Email address" required="">
-                                            <span class="input-group__btn">
-                                                <button type="submit" class="btn newsletter__submit" name="commit" id="Subscribe"><span class="newsletter__submit-text--large">Subscribe</span></button>
-                                            </span>
-                                        </div>
-                                    </form>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+
+    <!-- footer-->
+    <footer class="p-5 bg-dark text-white text-center position relative">
+        <div class="container">
+            <p class="lead">copyright &copy; 2024 BeezNest E-commerce <a href="#" class="bottom-0 end-0 p-5"><i class="bi bi-arrow-up-circle h1 text-primary float-end"></i></a></p>
+
         </div>
+
     </footer>
+
 
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
